see #21 cleaned up code to improve syntax and readability