@@ -1,18 +1,18 @@
 package com.betterreads.unit.assemblers;
 
-import static org.junit.jupiter.api.Assertions.assertEquals;
-
-import java.util.Collections;
-
+import com.betterreads.assemblers.BooksAssembler;
+import com.betterreads.models.Author;
+import com.betterreads.models.Book;
+import com.betterreads.models.Publisher;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.springframework.hateoas.EntityModel;
 import org.springframework.hateoas.IanaLinkRelations;
 
-import com.betterreads.assemblers.BooksAssembler;
-import com.betterreads.models.Author;
-import com.betterreads.models.Book;
-import com.betterreads.models.Publisher;
+import java.util.Collections;
+import java.util.Objects;
+
+import static org.junit.jupiter.api.Assertions.assertEquals;
 
 public class BooksAssemblerTest {
 
@@ -43,19 +43,19 @@ public class BooksAssemblerTest {
 
         EntityModel<Book> entity = assembler.toModel(book);
 
-        assertEquals("1", entity.getContent().getId());
+        assertEquals("1", Objects.requireNonNull(entity.getContent()).getId());
         assertEquals("000-98766612", entity.getContent().getIsbn());
         assertEquals("Caged Wisdom", entity.getContent().getTitle());
         assertEquals(1, entity.getContent().getAuthors().size());
-        assertEquals("1", entity.getContent().getAuthors().get(0).getId());
-        assertEquals("George", entity.getContent().getAuthors().get(0).getFirstName());
-        assertEquals("Bluth", entity.getContent().getAuthors().get(0).getLastName());
-        assertEquals("Sr", entity.getContent().getAuthors().get(0).getSuffix());
+        assertEquals("1", entity.getContent().getAuthors().getFirst().getId());
+        assertEquals("George", entity.getContent().getAuthors().getFirst().getFirstName());
+        assertEquals("Bluth", entity.getContent().getAuthors().getFirst().getLastName());
+        assertEquals("Sr", entity.getContent().getAuthors().getFirst().getSuffix());
         assertEquals("1", entity.getContent().getPublisher().getId());
         assertEquals("Prison Publishing", entity.getContent().getPublisher().getName());
 
         assertEquals(2, entity.getLinks().toList().size());
-        assertEquals("/v1/books/1", entity.getLinks().getLink(IanaLinkRelations.SELF).get().getHref());
-        assertEquals("/v1/books", entity.getLinks().getLink("v1/books").get().getHref());
+        assertEquals("/v1/books/1", Objects.requireNonNull(entity.getLinks().getLink(IanaLinkRelations.SELF).orElse(null)).getHref());
+        assertEquals("/v1/books", Objects.requireNonNull(entity.getLinks().getLink("v1/books").orElse(null)).getHref());
     }
 }
